# kiji-safeguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  linting-testing.yml  release.yml
examples/nvidia_stock_advisor/: .env.example  README.md  crew.py  main.py  pyproject.toml
examples/nvidia_stock_advisor/mcp_servers/: news_server.py  stock_price_server.py
kiji_safeguard/: __init__.py  autosign.py  cli.py  signer.py
kiji_safeguard/server/backend/: database.py  main.py
kiji_safeguard/server/frontend/: index.html
landing_page/: index.html
server/backend/: main.py  models.py
server/frontend/: index.html
tests/: conftest.py  test_autosign.py  test_autosign_client.py  test_registry.py  test_signer.py
