[project]
name = "kiji-safeguard"
version = "0.2.0"
description = "Sign and verify MCP server interfaces. Detects when tools, schemas or descriptions change."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "mcp>=1.10.0",
    "pytest>=8.0",
]

[project.scripts]
kiji-safeguard = "kiji_safeguard.cli:main"

# uv installs the default dependency group automatically, so a plain
# `uv run kiji-safeguard serve` from the repo root has the registry deps.
[dependency-groups]
dev = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "mcp>=1.10.0",
    "pytest>=8.0",
    "commitizen>=4.16.3",
    "ruff>=0.15.17",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "kiji_safeguard",
    "kiji_safeguard.server",
    "kiji_safeguard.server.backend",
    "kiji_safeguard.server.frontend",
]

[tool.setuptools.package-data]
"kiji_safeguard.server.frontend" = ["*.html"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests can `from tests.conftest import ...`
# and `import kiji_safeguard` when run via `uv run pytest`.
pythonpath = ["."]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
# Read and write the version from [project].version (PEP 621) so commitizen
# and the build backend stay in sync — no second source of truth.
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
# Stay on 0.x until we opt into 1.0: a breaking change bumps the minor, not
# the major.
major_version_zero = true
